export enum HskLevel {
  HSK1 = 1,
  HSK2 = 2,
  HSK3 = 3,
  HSK4 = 4,
  HSK5 = 5,
  HSK6 = 6,
  HSK7 = 7, // Added for future expansion
  HSK8 = 8, // Added for future expansion
  HSK9 = 9, // Added for future expansion
}
