export enum ContentType {
  WORD_DEFINITION = 'content_word_definition',
  SENTENCES = 'content_sentences',
}