export enum QuestionType {
  SELECTION_TEXT_TEXT = 'question_selection_text_text',
  SELECTION_TEXT_IMAGE = 'question_selection_text_image',
  SELECTION_AUDIO_TEXT = 'question_selection_audio_text',
  SELECTION_AUDIO_IMAGE = 'question_selection_audio_image',
  SELECTION_IMAGE_TEXT = 'question_selection_image_text',
  MATCHING_TEXT_TEXT = 'question_matching_text_text',
  MATCHING_TEXT_IMAGE = 'question_matching_text_image',
  MATCHING_AUDIO_TEXT = 'question_matching_audio_text',
  MATCHING_AUDIO_IMAGE = 'question_matching_audio_image',
  FILL_TEXT_TEXT = 'question_fill_text_text',
  BOOL_AUDIO_TEXT = 'question_bool_audio_text',
}
